--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.56.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.1.5",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "vue": "^3.5.21"
     }
 }
